# clPyrKLT

./: .gitignore  CMakeLists.txt  README.md
CudaLK/: CMakeLists.txt
CudaLK/headers/: cudaLK.h
CudaLK/src/: cudaLK.cu  trackingKernels.cu
Demo/: CMakeLists.txt  demo.cpp
example/: main.cpp
example/qt_example/: qt_example.qml  qt_example.qmlproject
libClKLT/: CMakeLists.txt  libClKLT.pro
libClKLT/headers/: clklt.h  libclklt.h
libClKLT/libClKLT/: libClKLT.pro  libclklt.cpp  libclklt.h  libclklt_global.h
libClKLT/src/: clklt.cpp  kernel_code.cl  libclklt.cpp
libCudaLK/: CMakeLists.txt  Doxyfile  Makefile  README  README.txt  common.mk  cudaLK.cu  cudaLK.h  derivativeKernels.cu  libCudaLK.files  libCudaLK.includes
libCudaLK/src/: derivativeKernels.cu
